[package]
authors = ["{{authors}}"]
description = "{{project-description}}"
edition = "2024"
license = "MIT"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
anyhow = "1"
bon = "3.7.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29"
tokio = { version = "1.40.0", features = ["full"] }
